# iceberg-catalog-sync

./: .gitignore  README.md  pyproject.toml
src/iceberg_catalog_sync/: __init__.py  cli.py  config.py  events.py  log.py  reporting.py  retry.py  sync.py  telemetry.py
tests/: conftest.py  test_cli.py  test_config.py  test_events.py  test_retry.py  test_sync.py
